9.4 Fazendo o deploy da exclusão de allocations em live
