# service/src/main/java/br/com/sw2you/realmeet/controller/AllocationController.java
@@ -1,5 +1,6 @@
 package br.com.sw2you.realmeet.controller;
 
+import static java.util.concurrent.CompletableFuture.runAsync;
 import static java.util.concurrent.CompletableFuture.supplyAsync;
 
 import br.com.sw2you.realmeet.api.facade.AllocationsApi;
@@ -9,10 +10,12 @@ import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
 import br.com.sw2you.realmeet.api.model.RoomDTO;
 import br.com.sw2you.realmeet.service.AllocationService;
 import br.com.sw2you.realmeet.util.ResponseEntityUtils;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.context.request.NativeWebRequest;
 
 @RestController
 public class AllocationController implements AllocationsApi { //RoomApi gerado pelo swagger
@@ -29,5 +32,11 @@ public class AllocationController implements AllocationsApi { //RoomApi gerado p
         //return supplyAsync
         return supplyAsync(() -> allocationService.createAllocation(createAllocationDTO), controllersExecutor)
                 .thenApply(ResponseEntityUtils::created);
+    }
+
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> deleteAllocation(Long id) {
+        return runAsync(() -> allocationService.deleteAllocation(id), controllersExecutor)
+                .thenApply(ResponseEntityUtils::noContent);
     }
 }
